--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
     - name: Connect via SSH to server
       env:
         SERVER: ${{ secrets.SERVER }}
+        SLACK_API_TOKEN: ${{ SLACK_API_TOKEN }}
+        SLACK_BOT_TOKEN: ${{ SLACK_BOT_TOKEN }}
       run: |
         ssh -i id_ed25519_bonobot $SERVER \
             -o StrictHostKeyChecking=no \
-            -f "wall test" \
+            -f "cd /root/bonobot/ && make build && make run" \
