--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
       run: |
         ssh -i id_ed25519_bonobot $SERVER \
             -o StrictHostKeyChecking=no \
-            -f "/root/bonobot/deploy.sh" \
+            -f "/root/bonobot/deploy.sh $SLACK_API_TOKEN $SLACK_BOT_TOKEN" \
