--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,18 +15,27 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3.5.0
 
+    - name: Tailscale
+      uses: tailscale/github-action@v2
+      with:
+        oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
+        oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
+        tags: tag:server
+
     - name: Create ssh private key file from env var
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
+        TS_HOST: ${{ vars.TS_HOST }}
       run: |
-        set -ex
-        sed -E 's/(-+(BEGIN|END) OPENSSH PRIVATE KEY-+) *| +/\1\n/g' <<< "$SSH_KEY" > id_ed25519_bonobot
-        chmod 400 id_ed25519_bonobot
+        mkdir ~/.ssh/
+        sed -E 's/(-+(BEGIN|END) OPENSSH PRIVATE KEY-+) *| +/\1\n/g' <<< "$SSH_KEY" > ~/.ssh/id_ed25519
+        chmod 400 ~/.ssh/id_ed25519
+        retries=5; until ssh-keyscan $TS_HOST >> ~/.ssh/known_hosts || [ $retries -eq 0 ]; do ((retries--)); sleep 5; done
 
     - name: Connect via SSH to server
       env:
-        SERVER: ${{ secrets.SERVER }}
+        TS_HOST: ${{ vars.TS_HOST }}
         SLACK_API_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       run: |
-        ssh -i id_ed25519_bonobot $SERVER -o StrictHostKeyChecking=no /root/bonobot/deploy.sh $SLACK_API_TOKEN $SLACK_BOT_TOKEN
+        ssh dev@$TS_HOST /home/dev/bonobot/deploy.sh $SLACK_API_TOKEN $SLACK_BOT_TOKEN
